--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <label for="pesan" class="form-label">Description</label>
                 <textarea class="form-control" id="pesan" rows="3" /></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Send</button>
+              <button type="submit" class="btn btn-success">Send</button>
             </form>
           </div>
         </div>
