--- a/index.html
+++ b/index.html
@@ -147,20 +147,28 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-7">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+                <strong>Pesan anda sudah terkirim!</strong> Silahkan tunggu balasan dari saya melalui email.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            <form name="submit-to-google-sheet">
               <div class="mb-3">
                 <label for="name" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="name"/>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email"/>
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Description</label>
-                <textarea class="form-control" id="pesan" rows="3" /></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"/></textarea>
               </div>
-              <button type="submit" class="btn btn-warning">Send</button>
+              <button type="submit" class="btn btn-warning btn-kirim">Send</button>
+              <button class="btn btn-warning btn-loading d-none" type="button" disabled>
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -175,5 +183,33 @@
     <!-- Akhir Footer -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- Script Form Google Sheets -->
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbxVu76fHpuxnherYpvOxJf7v3WZMj7NptFpnAMAtSA2RsUupMabxSB3EXXWYIWqx8nb/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const btnKirim = document.querySelector('.btn-kirim');
+        const btnLoading = document.querySelector('.btn-loading');
+        const Alert = document.querySelector('.alert');
+
+        form.addEventListener('submit', e => {
+          e.preventDefault();
+          //ketika submit di-Klik
+          //maka tombol loading muncul, tombol kirim hilang
+          btnLoading.classList.toggle('d-none');
+          btnKirim.classList.toggle('d-none');
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                btnLoading.classList.toggle('d-none');
+                btnKirim.classList.toggle('d-none');
+                //tampilkan alert
+                Alert.classList.toggle('d-none');
+                //reset form
+                form.reset();
+                console.log('Success!', response);
+            })
+            .catch(error => console.error('Error!', error.message))
+        });
+      </script>
+      
   </body>
 </html>
