--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="row justify-content-center">
           <div class="col-md-7">
             <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
-                <strong>Pesan anda sudah terkirim!</strong> Silahkan tunggu balasan dari saya melalui email.
+                <strong>Terima Kasih!</strong> Pesan anda sudah diterima.
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
             <form name="submit-to-google-sheet">
