--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- Stye CSS -->
     <link rel="stylesheet" href="style.css" />
-
+    <!-- Shortcut Icon -->
+    <link rel="shortcut icon" href="img/ico/file-ppt.ico">
     <title>Portfolio | Ulil Khafabi</title>
   </head>
   <body id="home">
@@ -42,7 +43,7 @@
     <!-- Akhir Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/me.jpg" alt="me" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/saya.jpg" alt="Ulil" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Ulil Khafabi</h1>
       <p class="lead">Students | Programming Web</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L80,90.7C160,117,320,171,480,170.7C640,171,800,117,960,112C1120,107,1280,149,1360,170.7L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
@@ -159,6 +160,10 @@
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" aria-describedby="email" name="email"/>
+              </div>
+              <div class="mb-3">
+                <label for="tlp" class="form-label">WhatsApp</label>
+                <input type="text" class="form-control" id="tlp" aria-describedby="tlp" name="tlp"/>
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Description</label>
